hamburger sidebar overflow fixed?

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,9 @@
 .App {
   text-align: center;
 }
-
+nav{
+  position: relative;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
